--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -2955,3 +2955,110 @@ img.zoom
             @media (min-width 780px)
                 border-radius 0 4px 4px 0 
                 width 60%
+
+
+
+.quiz
+    padding 20px 30px 
+    line-height 1.2em
+    &__title
+        font-size 14px
+        margin-bottom 10px
+        padding-bottom 10px
+        border-bottom 1px solid #eee 
+    &__test
+        width calc(100% - 300px)
+    &__description
+        width 300px
+    &__question
+        font-size 20px
+        margin-bottom 20px
+   
+    &__footer
+        display flex
+        align-items center
+    &__progress-bar-label  
+        position relative
+        font-size 18px
+        color #f95555
+        font-weight 600
+        margin-bottom 15px
+        &:before
+            position relative
+            content 'Готово '
+            margin-right 3px
+            font-size 14px
+            color #000
+            font-weight 500
+    &__progress-bar
+        margin-right 40px
+        width 100%
+        margin-right 40px
+    &__progress-bar-field
+        height 10px
+        box-shadow 0 0px 6px 0px rgba(207, 207, 207, 0.76);
+        width 100%
+        border-radius 40px
+        background #eee 
+        position relative
+        margin-bottom 20px
+        flex-shrink 0
+        border 1px solid #ddd
+        span
+            transition all 0.7s
+            content ''
+            position absolute
+            //background-color #2b519e
+            background-image linear-gradient(90deg, #96b4ec, #aabfe7)
+            height 8px
+            width 0%
+            border-radius 40px
+            top 0
+            left 0
+            bottom 0
+            right 0
+            &:after
+                content ""
+                position absolute
+                top 0
+                left 0
+                bottom 0
+                right 0
+                height 8px
+                border-radius 40px
+                background-image  linear-gradient(-45deg, rgba(0, 0, 0, 0.3) 0, rgba(0, 0, 0, 0.3) 25%, transparent 0, transparent 50%, rgba(0, 0, 0, 0.3) 0, rgba(0, 0, 0, 0.3) 75%, transparent 0, transparent 100%)
+                background-size 40px 40px
+                mix-blend-mode overlay
+                opacity .8
+                animation quiz__progress-bar__move 3s linear infinite
+    &__item
+        padding 20px 0
+        display flex
+    &__next
+    &__previous
+        cursor pointer
+        height 40px
+        line-height 40px
+        border-radius 40px
+        display flex
+        justify-content center
+        align-items center
+        flex-shrink 0
+        font-size 16px
+    &__next 
+        background #f95555
+        color #fff
+        padding 0 25px 0 20px
+        .arrow
+            position relative
+            left 10px
+    &__previous
+        width 40px
+        border 1px solid #ddd
+        margin 0 10px  
+        
+@keyframes quiz__progress-bar__move 
+    0%
+        background-position 0 0
+    to
+        background-position 40px 40px
